@@ -1,5 +1,8 @@
 2008-11-02  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
+	* scale.h (tino_scale_number): bugfix in number scaling: In
+	certain (most common) situations one digit too much was rendered.
+
 	* getopt.h (tino_getopt_usage): TINO_GETOPT_TYPE_IGNORE now no
 	more output on help
 
